syntax = "proto3";
package prism.incentives;

import "gogoproto/gogo.proto";
import "prism/incentives/bond.proto";
import "prism/incentives/params.proto";
import "prism/incentives/pool.proto";
import "prism/incentives/unbonding.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/prism-finance/prism-core/x/incentives/types";

// GenesisState defines the incentives module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Pool pool_list = 2 [(gogoproto.nullable) = false];
  repeated Bond bond_list = 3 [(gogoproto.nullable) = false];
  repeated Unbonding unbonding_list = 4 [(gogoproto.nullable) = false];
  uint64 unbonding_count = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
